--- a/login/index.html
+++ b/login/index.html
@@ -26,8 +26,10 @@
                         <input type="password" name="senha" id="senha">
                     </div>
                     <div class="links-ajuda">
-                        <input type="checkbox" name="lembrar" id="lembrar">
-                        <label for="lembrar">Lembrar-me</label>
+                        <div class="inputs">
+                            <input type="checkbox" name="lembrar" id="lembrar">
+                            <label for="lembrar">Lembrar-me</label>
+                        </div>
                         <a href="">Esqueci a senha</a>
                     </div>
                 </div>
