--- a/404/index.html
+++ b/404/index.html
@@ -40,7 +40,7 @@
                     
                     <div class="botoes">
                         <button class="botao primario"> <a href="">Voltar a página principal</a> </button>
-                        <button id="secundario"> <a href="">Ou ir ao canal de ajuda</a> </button>
+                        <button class="botao secundario"> <a href="">Ou ir ao canal de ajuda</a> </button>
                     </div>
 
                 </div>
